@@ -442,5 +442,7 @@ deleteItemLabel=Suprimeix
 deleteItemAccesskey=S
 deleteEventLabel=Suprimeix la cita
 deleteEventAccesskey=S
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
 
 
