@@ -439,3 +439,5 @@ deleteItemLabel=Smazat
 deleteItemAccesskey=S
 deleteEventLabel=Smazat událost
 deleteEventAccesskey=S
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
