@@ -439,3 +439,5 @@ deleteItemLabel=Slet
 deleteItemAccesskey=S
 deleteEventLabel=Slet begivenhed
 deleteEventAccesskey=S
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
