@@ -438,3 +438,5 @@ deleteItemLabel=Löschen
 deleteItemAccesskey=L
 deleteEventLabel=Termin löschen
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
