@@ -439,3 +439,5 @@ deleteItemLabel=Delete
 deleteItemAccesskey=l
 deleteEventLabel=Delete Event
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
