@@ -439,3 +439,5 @@ deleteItemLabel=Borrar
 deleteItemAccesskey=B
 deleteEventLabel=Borrar evento
 deleteEventAccesskey=B
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
