@@ -228,3 +228,5 @@ deleteItemLabel = Eliminar
 deleteItemAccesskey = l
 deleteEventLabel = Eliminar evento
 deleteEventAccesskey = l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
