@@ -439,3 +439,5 @@ deleteItemLabel=Ezabatu
 deleteItemAccesskey=l
 deleteEventLabel=Ezabatu gertaera
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
