@@ -439,3 +439,5 @@ deleteItemLabel=Supprimer
 deleteItemAccesskey=p
 deleteEventLabel=Supprimer l'événement
 deleteEventAccesskey=p                                                          
+deleteEventConfirmLabel=Êtes-vous sûr de vouloir supprimer cet ou ces événements?
+deleteTaskConfirmLabel=Êtes-vous sûr de vouloir supprimer cette ou ces tâches?
