@@ -439,3 +439,5 @@ deleteItemLabel=Scrios
 deleteItemAccesskey=l
 deleteEventLabel=Scrios Imeacht
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
