@@ -441,3 +441,5 @@ deleteItemLabel=Törlés
 deleteItemAccesskey=l
 deleteEventLabel=Esemény törlése
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
