@@ -439,3 +439,5 @@ deleteItemLabel=Eyða
 deleteItemAccesskey=l
 deleteEventLabel=Eyða atburði
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
