@@ -229,3 +229,5 @@ deleteItemLabel = Elimina
 deleteItemAccesskey = E
 deleteEventLabel = Elimina evento
 deleteEventAccesskey = E
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
