@@ -440,3 +440,5 @@ deleteItemLabel=削除
 deleteItemAccesskey=l
 deleteEventLabel=予定を削除
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
