@@ -439,3 +439,5 @@ deleteItemLabel=\u10ec\u10d0\u10e8\u10da\u10d0
 deleteItemAccesskey=l
 deleteEventLabel=\u10db\u10dd\u10d5\u10da\u10d4\u10dc\u10d8\u10e1 \u10ec\u10d0\u10e8\u10da\u10d0
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
