@@ -372,3 +372,5 @@ deleteItemLabel=삭제
 deleteItemAccesskey=l
 deleteEventLabel=이벤트 삭제
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
