@@ -444,3 +444,5 @@ deleteItemLabel=Pašalinti
 deleteItemAccesskey=š
 deleteEventLabel=Pašalinti įvykį
 deleteEventAccesskey=š
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
