@@ -439,3 +439,5 @@ deleteItemLabel=Slett
 deleteItemAccesskey=l
 deleteEventLabel=Slett hendelse
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
