@@ -439,3 +439,5 @@ deleteItemLabel=Verwijderen
 deleteItemAccesskey=V
 deleteEventLabel=Gebeurtenis verwijderen
 deleteEventAccesskey=v
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
