@@ -444,3 +444,5 @@ deleteItemLabel=Usuń
 deleteItemAccesskey=U
 deleteEventLabel=Usuń wydarzenie
 deleteEventAccesskey=U
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
