@@ -440,3 +440,5 @@ deleteItemLabel=Excluir
 deleteItemAccesskey=l
 deleteEventLabel=Excluir evento
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
