@@ -439,3 +439,5 @@ deleteItemLabel=Apagar
 deleteItemAccesskey=p
 deleteEventLabel=Apagar Evento
 deleteEventAccesskey=g
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
