@@ -439,3 +439,5 @@ deleteItemLabel=Șterge
 deleteItemAccesskey=Ș
 deleteEventLabel=Șterge evenimentul
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
