@@ -439,3 +439,5 @@ deleteItemLabel=Удалить
 deleteItemAccesskey=У
 deleteEventLabel=Удалить событие
 deleteEventAccesskey=У
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
