@@ -439,3 +439,5 @@ deleteItemLabel=Odstrániť
 deleteItemAccesskey=d
 deleteEventLabel=Odstrániť udalosť
 deleteEventAccesskey=d
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
