@@ -439,3 +439,5 @@ deleteItemLabel=Izbriši
 deleteItemAccesskey=z
 deleteEventLabel=Izbriši dogodek
 deleteEventAccesskey=z
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
