@@ -439,3 +439,5 @@ deleteItemLabel=Ta bort
 deleteItemAccesskey=T
 deleteEventLabel=Ta bort händelse
 deleteEventAccesskey=T
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
