@@ -315,6 +315,8 @@ dayIntervalBetweenYears=%1$S %2$S, %3$S – %4$S %5$S, %6$S
 # LOCALIZATION NOTE (dayIntervalInMonth):
 dayIntervalInMonth=%1$S %2$S – %3$S, %4$S
 deleteEventAccesskey=л
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
 deleteEventLabel=Вилучити подію
 deleteItemAccesskey=л
 deleteItemLabel=Вилучити
