@@ -228,3 +228,5 @@ deleteItemLabel = 删除
 deleteItemAccesskey = l
 deleteEventLabel = 删除事件
 deleteEventAccesskey = l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
