@@ -441,3 +441,5 @@ deleteItemLabel=刪除
 deleteItemAccesskey=l
 deleteEventLabel=刪除事件
 deleteEventAccesskey=l
+deleteEventConfirmLabel=Do you really want to delete this or these events?
+deleteTaskConfirmLabel=Do you really want to delete this or these tasks?
